updated some things

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
 <header>
-   <mat-toolbar style="background-color: rgba(138, 42, 202, 0.747); color: white;">
+   <mat-toolbar class="mytoolbar">
     <span>My Angular</span>
     <mat-icon>favorite</mat-icon>
     <span class="example-spacer"></span>
