--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,10 @@
     position: relative;
     color: white;
 }
+.mytoolbar {
+    background-color: rgba(138, 42, 202, 0.747); 
+    color: white;
+}
 .githubbutton {
     background-color: white;
     margin-right: 1%;
