--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <main>
   <!-- <mat-slide-toggle (change)="onToggleChange($event)">Toggle me!</mat-slide-toggle> -->
-  <mat-card class="shibacard" appearance="outlined">
+   <mat-card class="shibacard" appearance="outlined">
   <mat-card-header>
     <p>Some Shiba</p>
     <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
@@ -9,8 +9,18 @@
     <p>I do everything random here to learn</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button (click)="likeShibe($event)" mat-button>LIKE</button>
+    <button (click)="shareShibe($event)" mat-button>SHARE</button>
   </mat-card-actions>
+  <mat-card-footer>
+    <p style="text-align: center;">{{likeCounter}}</p>
+  </mat-card-footer>
+  </mat-card> 
+
+  <mat-card class="Angular18Card">
+    <mat-card-header></mat-card-header>
+  <mat-card-content>
+    <p>Some Stuff i do here while learning Angular 18</p>
+  </mat-card-content>
   </mat-card>
  </main>
