--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,12 @@
     margin-top: 1%;
     margin-left: 1%;
 }
+.Angular18Card {
+    position: relative;
+    width: 25%;
+    margin-top: 1%;
+    margin-left: 1%;
+    &:hover {
+        background-color: darken($color: #f1efef, $amount: 0);
+    }
+}
